[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastTB"
version = "0.1.0"
authors = [
  { name="Andrew Lundgren", email="andrew.lundgren@port.ac.uk" },
]
description = "Fast approximate template bank for NR injections"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy", "scipy", "pandas", "pycbc", "quaternion", "spherical", "h5py"
]

[tool.setuptools.package-data]
fastTB = ['config.json']

[tool.setuptools]
packages = ["fastTB"]
